vcs/specs/parser/fail/statements/throw_missing_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, throw, expression, error
// @description: Test throw statement with missing expression
// @expected-error: E048

fn test() throws(Error) {
    throw;
}
